--- a/translations/serverhop.phrases.txt
+++ b/translations/serverhop.phrases.txt
@@ -18,4 +18,9 @@
 		"#format"	"{1:s},{2:s}"
 		"en"		"{1} [type {2} to join]"
 	}
+	"RerouteKick"
+	{
+		"#format"	"{1:d},{2:s},{3:i}"
+		"en"		"The server has exceeded current max player count of {1}. Please redirect the main server. -> {2}:{3}"
+	}
 }
